--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "portfolio",
+  "name": "minor-main",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.10",
-    "microcms-js-sdk": "^3.1.2",
-    "sass": "^1.62.1"
+    "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.13",
+    "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "sass": "^1.81.0"
   }
 }
