--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minor-main",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -19,6 +19,7 @@
     "eslint": "^9.15.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "microcms-js-sdk": "^3.1.2",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "sass": "^1.81.0"
